--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -961,4 +961,22 @@ config TOUCHSCREEN_MAXIM_STI
 	  To compile this driver as a module, choose M here: the
 	  module will be called maxim_sti.
 
+config TOUCHSCREEN_SWEEP2WAKE
+    tristate "Sweep2Wake for touchscreens"
+    select TOUCHSCREEN_PREVENT_SLEEP
+    default n
+
+config TOUCHSCREEN_DOUBLETAP2WAKE
+    tristate "DoubleTap2Wake for touchscreens"
+    select TOUCHSCREEN_PREVENT_SLEEP
+    default n
+
+config TOUCHSCREEN_PREVENT_SLEEP
+    tristate "Inihibit sleep on modified touchscreen drivers"
+    depends on TOUCHSCREEN_SWEEP2WAKE
+    depends on TOUCHSCREEN_DOUBLETAP2WAKE
+    default n
+    help
+      This disables the sleep function of modified touchscreen drivers.
+
 endif
