--- a/mm/Makefile
+++ b/mm/Makefile
@@ -36,6 +36,8 @@ obj-y			:= filemap.o mempool.o oom_kill.o fadvise.o \
 
 obj-y += init-mm.o
 
+obj-$(CONFIG_KSM_MEMCMP)	+= memcmp_ksm.o
+
 ifdef CONFIG_NO_BOOTMEM
 	obj-y		+= nobootmem.o
 else
